--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aash-1907.github.io",
+  "homepage": "http://yash-1907.github.io",
   "name": "pay",
   "version": "0.1.0",
   "private": true,
